# flash-attention-hip

./: CMakeLists.txt  LICENSE  README.md  flash_attn.cpp  flash_attn.h  random_utils.h
src/: bwd_device_gemm_invoker.hpp  bwd_device_gemm_template.hpp  device_gemm_trait.hpp  device_gemm_trait_hip.hpp  flash_bwd_runner_batched_hdim128_fp16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim128_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim32_fp16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim32_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim64_fp16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim64_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim128_fp16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim128_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim32_fp16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim32_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim64_fp16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim64_fp16_noncausal_gfx9x.cpp  flash_fwd_runner_batched_hdim128_fp16_causal_gfx9x.cpp  flash_fwd_runner_batched_hdim128_fp16_causal_gfx9x_hip.hip  flash_fwd_runner_batched_hdim128_fp16_noncausal_gfx9x.cpp  flash_fwd_runner_batched_hdim128_fp16_noncausal_gfx9x.hip  flash_fwd_runner_batched_hdim128_fp16_noncausal_gfx9x_hip.hip  flash_fwd_runner_batched_hdim32_fp16_causal_gfx9x.cpp  flash_fwd_runner_batched_hdim32_fp16_causal_gfx9x_hip.hip  flash_fwd_runner_batched_hdim32_fp16_noncausal_gfx9x.cpp  flash_fwd_runner_batched_hdim32_fp16_noncausal_gfx9x_hip.hip  flash_fwd_runner_batched_hdim64_bf16_causal_gfx9x.cpp  flash_fwd_runner_batched_hdim64_bf16_noncausal_gfx9x.cpp  flash_fwd_runner_batched_hdim64_fp16_causal_gfx9x.cpp  flash_fwd_runner_batched_hdim64_fp16_causal_gfx9x.hip  flash_fwd_runner_batched_hdim64_fp16_causal_gfx9x_hip.hip  flash_fwd_runner_batched_hdim64_fp16_noncausal_gfx9x.cpp  flash_fwd_runner_batched_hdim64_fp16_noncausal_gfx9x_hip.hip  flash_fwd_runner_grouped_hdim128_fp16_causal_gfx9x.cpp  flash_fwd_runner_grouped_hdim128_fp16_causal_gfx9x_hip.hip  flash_fwd_runner_grouped_hdim128_fp16_noncausal_gfx9x.cpp  flash_fwd_runner_grouped_hdim128_fp16_noncausal_gfx9x_hip.hip  flash_fwd_runner_grouped_hdim32_fp16_causal_gfx9x.cpp  flash_fwd_runner_grouped_hdim32_fp16_causal_gfx9x_hip.hip  flash_fwd_runner_grouped_hdim32_fp16_noncausal_gfx9x.cpp  (+20 more)
(+27 files in other folders)
